# Jarvis

./: api.py  app.py  benchmark.py  config.py  pyproject.toml
core/: llm.py  session.py
tools/: base.py  manager.py  time_tool.py  web_search.py
voice/: speech_to_text.py  text_to_speech.py
